# Spider_ML_Task_1

./: README.md  app.py  main.py  pyproject.toml  rag_backend.py
applied_ml_domain/: README.md
applied_ml_domain/data/vector_store/2e197d6e-0990-4826-8028-9168aa2793f3/: index_metadata.pickle
applied_ml_domain/notebook/: RAG.ipynb
base_task/: README.md  submission.csv
base_task/notebooks/: fashion_mnist_base_task_.ipynb
base_task/saved_models/: fashion_mnist_model.pkl
